Build pages for 30a9c5699b0c92cc49430bd96544c3b8ef6d0085

--- a/index.html
+++ b/index.html
@@ -224,30 +224,6 @@ Brings a tear to your eye to see the next generation of hacker growing up before
 
 --
 
-# Hacking the System: Part II
-
-<div class="centered-container">
-<video controls autoplay muted class="fragment disappearing-fragment nospace-fragment fade-out" data-fragment-index="0">
-    <source src="videos/reset_hack.webm"
-            type="video/webm">
-</video>
-
-<img src="images/screenshots/chord-trainer-v03-session-history-viewer.png"
-     class="splash screenshot nospace-fragment fragment fade-in"
-     data-fragment-index="0"
-     alt="A screenshot of the 'Session History Viewer', which shows the stats for each
-         recent session."/>
-
-</div>
-
-Notes:
-
-That didn't stop my son, though! He also discovered that I had no way of knowing whether or not the chord trainer had gotten reset — and the rule for going to the next level was that he had to get 4 perfect scores *in a row*. So he would just do it over and over again, resetting any time he got one wrong until he got 25 perfect in a row.
-
-I did figure out that he was doing that because a 5-year-old lacks a certain amount of guile, but incidentally I was working on a session history viewer feature /anyway/, which eliminated this little hack.
-
---
-
 # You can use software to connect to those around you
 
 <div class="centered-container">
@@ -601,6 +577,7 @@ img.segfig {
 
 # Not every project is big!
 
+<div class="centered-container">
 <img src="images/screenshots/anki-nightingale-00.png"
     class="fragment mobile-screenshot screenshot disappearing-fragment nospace-fragment fade-out"
     data-fragment-index="0"/>
@@ -611,18 +588,19 @@ img.segfig {
     class="fragment mobile-screenshot disappearing-fragment nospace-fragment screenshot fade-in-and-out"
     data-fragment-index="1"/>
 <img src="images/screenshots/anki-nightingale-03-settings.png"
-    class="fragment mobile-screenshot screenshot fade-in"
+    class="fragment mobile-screenshot screenshot nospace-fragment fade-in"
     data-fragment-index="2"/>
+</div>
 
 --
 
 # Not every project is big!
 
-<div
-    class="fragment disappearing-fragment nospace-fragment fade-out"
-    data-fragment-index="0">
+<div>
 
-```python
+<pre class="code-wrapper">
+<code data-trim data-noescape class="language-python">
+<span class="fragment semi-fade-out" data-fragment-index="0">
 SENTENCE_PROMPT: Final[str] = """\
 You are an expert Spanish teacher and lexicographer, whose specialty is designing excellent example sentences that show
 off the range of uses of a given word.
@@ -634,7 +612,8 @@ the meaning specified by the English meaning. When the word is a verb, select di
 different sentences. The translations do not need to be word-for-word translations, it is more important that they
 capture the general spirit of the original Spanish.
 
-In some of your example sentences, it would be a bonus if they contain useful or interesting facts.
+</span><span class="fragment custom bolds" data-fragment-index="0">In some of your example sentences, it would be a bonus if they contain useful or interesting facts.</span>
+<span class="fragment semi-fade-out" data-fragment-index="0">
 
 Example:
 ========
@@ -660,13 +639,21 @@ OUTPUT:
 
 ...
 """
-```
+</span>
+</code>
+</pre>
 
 <div><em>You know what's really good at languages? A Large Language Model</em></div>
 
 </div>
 
-<div class="gallery three-wide fragment nospace-fragment fade-in" data-fragment-index="0">
+--
+
+<!-- .slide: data-transition="none" -->
+
+# Not every project is big!
+
+<div class="gallery three-wide">
     <div class="gallery-item">
         <img src="images/screenshots/anki-nightingale-04-distinct-sounds.png"
              class="screenshot mobile-screenshot"
@@ -726,94 +713,51 @@ OUTPUT:
 
 # LLMs make the easy stuff basically free
 
-<style>
-div.wide-code pre.code-wrapper {
-    overflow-x: clip;
-    max-width: 45dvw;
-}
-
-</style>
-
 <div class="centered-container">
 <div class="side-by-side">
 
-<div class="left wide-code" style="margin-right: 3em;">
+<div class="left-container left">
 <b>Prompt</b>
 
-````markdown
-Please write me a Python script that takes a spreadsheet in this format as input:
+<blockquote>
 
-```
-Class	Child	Parent 1 Name	Parent 1 Email	Parent 1 Phone	Parent 2	Parent 2 Email	Parent 2 Phone
-T1	Johnson, Thomas	Monica Johnson	monica.johnson@example.com	845-555-7632	Derek Johnson	derekjohnson@example.com	617-555-8291
-T1	Rivera, Sophia	Elena Martinez	emartinez@example.com	781-555-4193	Miguel Rivera	miguelrivera@example.com	781-555-6047
-```
+Please write me an imagemagick or other command line command that takes a
+number of images and removes a section from the middle of it (along the y
+axis). So if I have an image that is 500 pixels tall, and I specify `FROM=200`
+and `TO=250`, I want the result to be an image that is 450 pixels tall (because
+50 rows of pixels have been removed), and the missing section should start 200
+pixels from the top and go until 250 pixels from the top.
 
-The output of this should be a `.vcf` contact in the vCard format containing all
-the selected contacts; there should also be an option to output one file per
-classroom, or individual files. You should be able to specify the output file; for
-configurations that generate more than one file, a separate input `--output-dir`
-should be specified, and this option should be mutually exclusive with `--output`.
-
-It should be possible to filter the selected contacts by class (allowing the
-`--class parameter` to the script to be specified more than once to include more
-than one class). It should also allow specifying --category any number of times,
-which would set values for the `CATEGORY` of every member in the output.
-
-To accomplish this, I recommend:
-
-- Parse each line into `Child` and `Parent` objects (use frozen dataclasses for
-  these), where `Parent` has attributes email and phone, and `Child` has attribute
-  classroom, where `classroom` is one of T1, T2, P1, P2, PK. When sorting by
-  `classroom`, it should sort in that order.
-
-- Construct a mapping between `Parent` and a set of `Child` objects, so that we
-  have an association between parents and their children. A given Parent may have
-  more than one child.
-
-...
-````
+</blockquote>
 
 </div>
-<div class="right">
+<div class="right left-container">
 
 <b>Result</b>
 
 ```bash
-$ uv run generate_vcard.py school-contacts.tsv --category=Boston \
-                                               --output-mode=per-class \
-                                               --output-dir=output-classes/
-$ tree output-classes
-output-classes/
-├── P1.vcf
-├── P2.vcf
-├── PK.vcf
-├── T1.vcf
-└── T2.vcf
+#!/bin/bash
 
-1 directory, 5 files
-```
+FROM=200
+TO=250
 
-<br/>
+for img in "$@"; do
+  filename=$(basename -- "$img")
+  extension="${filename##*.}"
+  filename="${filename%.*}"
 
-```bash
-$ uv run generate_vcard.py school-contacts.tsv --category=Boston \
-                                               --output-mode=per-parent \
-                                               --output-dir=output-example/
+  # Calculate bottom section height (total height minus TO)
+  height=$(identify -format "%h" "$img")
+  bottom_height=$((height - TO))
 
-$ cat output-parents/Vorkosigan,Aral.vcf
-BEGIN:VCARD
-VERSION:3.0
-CATEGORIES:Boston
-EMAIL;TYPE=INTERNET,HOME:aral.vorkosigan@example.mil
-FN:Aral Vorkosigan
-ITEM1.X-ABLABEL:_$!<Spouse>!$_
-ITEM1.X-ABRELATEDNAMES:Cordelia Naismith
-ITEM2.X-ABLABEL:_$!<Child>!$_
-ITEM2.X-ABRELATEDNAMES:Miles Naismith Vorkosigan
-N:Vorkosigan;Aral;;;
-TEL;TYPE=CELL:+1 999-555-1111
-END:VCARD
+  # Extract top and bottom sections and combine
+  convert "$img" \
+    -gravity North -crop x${FROM}+0+0 \
+    \( "$img" -gravity South -crop x${bottom_height}+0+0 \) \
+    -append "${filename}_trimmed.${extension}"
+
+  echo "Processed $img -> ${filename}_trimmed.${extension}"
+done
 ```
 
 </div>
@@ -834,7 +778,7 @@ END:VCARD
 
 
 <div class="gallery two-wide">
-<div class="gallery-item big-code">
+<div class="gallery-item medium-code left-container">
 
 <h3>Input</h3>
 
@@ -848,7 +792,7 @@ END:VCARD
 ```
 
 </div>
-<div class="gallery-item medium-code">
+<div class="gallery-item medium-code left-container">
 
 <h3>Output</h3>
 
@@ -874,41 +818,6 @@ END:VCARD
 
 https://www.harihareswara.net/posts/2022/speech-to-text-with-whisper-how-i-use-it-why/
 
-</div>
-
---
-
-# General advice
-
-<style>
-
-div.bigger-uls li {
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
-    font-size: 3rem;
-}
-
-div.bigger-uls li li {
-    margin-left: 2rem;
-}
-
-</style>
-
-<div class="centered-container bigger-uls">
-<ul>
-    <li class="fragment fade-in">LLMs are improving rapidly</li>
-    <li class="fragment fade-in">LLMs can get you started really quickly on new technologies</li>
-    <li class="fragment fade-in">
-    Some stuff I use LLMs for while coding:
-        <ul>
-            <li>Generate boilerplate</li>
-            <li>Write one-liners and small scripts</li>
-            <li>Understanding long error messages</li>
-            <li>Finding dumb mistakes</li>
-            <li>Generating tests</li>
-        </ul>
-    </li>
-</ul>
 </div>
 
 					</textarea>
